apps/homelab/homepage/api_rewrite.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-api-rewrite
  namespace: homepage
spec:
  replacePathRegex:
    regex: ^/homepage/api/(.*)
    replacement: /api/$1
