apps/homelab/homepage/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: homepage-strip
  namespace: homepage

spec:
  stripPrefix:
    prefixes:
      - /homepage
