apps/homelab/homepage/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homepage
  namespace: homepage

spec:
  entryPoints:
    - web
    - websecure

  routes:
    - match: PathPrefix(`/homepage`) ||
           PathPrefix(`/_next`) ||
           PathPrefix(`/config`) ||
           PathPrefix(`/favicon`) ||
           PathPrefix(`/site.webmanifest`) ||
           PathPrefix(`/services`) ||
           PathPrefix(`/widgets`) ||
           PathPrefix(`/bookmarks`) ||
           PathPrefix(`/resources`) ||
           PathPrefix(`/releases`) ||
           PathPrefix(`/validate`) ||
           PathPrefix(`/hash`)
           PathPrefix(`/api`)
      kind: Rule
      middlewares:
        - name: homepage-strip
      services:
        - name: homepage
          port: 3000
